# sbcli

./: .gitmodules  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  mdns.rs  mod.rs  types.rs
